force-app/main/default/objects/Portfolio__c/fields/Applied_Money__c.field-meta.xml
<CustomField>
    <fullName>Applied_Money__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Applied Money</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>