force-app/main/default/objects/Portfolio__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BDR</fullName>
            </value>
            <value>
                <fullName>Cryptocurrency</fullName>
            </value>
            <value>
                <fullName>Fixed Income</fullName>
            </value>
            <value>
                <fullName>Real Estate Fund</fullName>
            </value>
            <value>
                <fullName>Stocks</fullName>
            </value>
            <value>
                <fullName>Variable Income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>